--- a/.github/workflows/backend-build-and-push.yaml
+++ b/.github/workflows/backend-build-and-push.yaml
@@ -18,6 +18,7 @@ jobs:
 
       - name: Create .env file
         run: |
+          touch /backend/.env
           echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> /backend/.env
 
       - name: Log in to Docker Hub
