--- a/.github/workflows/backend-build-and-push.yaml
+++ b/.github/workflows/backend-build-and-push.yaml
@@ -23,8 +23,8 @@ jobs:
 
       - name: Create .env file
         run: |
-          touch /backend/.env
-          echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> /backend/.env
+          touch backend/.env
+          echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> backend/.env
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
