--- a/.github/workflows/backend-build-and-push.yaml
+++ b/.github/workflows/backend-build-and-push.yaml
@@ -39,5 +39,5 @@ jobs:
           push: true
           #linux/arm/v7,linux/arm64,
           platforms: linux/arm64/v8
-          tags: ${{ secrets.DOCKER_USERNAME }}/chat-backend:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/rag-chatbot-backend:latest
           # tags: ${{ secrets.DOCKER_USERNAME }}/file-stash:${{ github.sha }}
