--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+aiodns==3.2.0
 aiohappyeyeballs==2.4.4
 aiohttp==3.11.11
 aiosignal==1.3.2
@@ -5,11 +6,17 @@ annotated-types==0.7.0
 anyio==4.7.0
 attrs==24.3.0
 blinker==1.9.0
+Brotli==1.1.0
 certifi==2024.12.14
+cffi==1.17.1
 charset-normalizer==3.4.1
+clerk-backend-api==2.0.2
 click==8.1.8
+cryptography==43.0.3
 dataclasses-json==0.6.7
 distro==1.9.0
+ecdsa==0.19.1
+eval_type_backport==0.2.2
 faiss-cpu==1.9.0.post1
 Flask==3.1.0
 Flask-Cors==5.0.0
@@ -24,36 +31,45 @@ Jinja2==3.1.6
 jiter==0.8.2
 jsonpatch==1.33
 jsonpointer==3.0.0
-langchain==0.1.12
-langchain-community==0.0.29
-langchain-core==0.1.31
-langchain-openai==0.0.8
-langchain-text-splitters==0.3.4
-langsmith==0.2.6
+langchain==0.2.5
+langchain-community==0.2.5
+langchain-core==0.2.8
+langchain-openai==0.1.14
+langchain-text-splitters==0.2.1
+langsmith==0.1.81
 MarkupSafe==3.0.2
 marshmallow==3.23.2
 multidict==6.1.0
 mypy-extensions==1.0.0
-numpy
+numpy==1.26.4
 openai==1.58.1
 orjson==3.10.12
 packaging==24.2
 propcache==0.2.1
-pydantic==1.10.13
+pyasn1==0.4.8
+pycares==4.6.0
+pycparser==2.22
+pydantic==2.11.3
 pydantic-settings==2.7.0
-pydantic_core==2.27.2
+pydantic_core==2.33.1
+PyJWT==2.10.1
 pypdf==5.1.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-jose==3.4.0
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
+rsa==4.9
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.36
-tenacity==9.0.0
+tenacity==8.5.0
 tiktoken==0.8.0
 tqdm==4.67.1
 typing-inspect==0.9.0
+typing-inspection==0.4.0
 typing_extensions==4.12.2
 urllib3==2.3.0
 Werkzeug==3.1.3
